impl role